# rgb-cube

./: .gitignore  CMakeLists.txt  README.md
include/: OpenGLPane.h
src/: OpenGLPane.cpp
